--- a/cli3/src/assets/heplers/_layout.scss
+++ b/cli3/src/assets/heplers/_layout.scss
@@ -1,3 +1,24 @@
+.alert{
+  position: relative;
+  width: 300px;
+  height: 100px;
+  position: fixed;
+  top: 20%;
+  left: 45%;
+  z-index: 555;
+  border-radius: 10px;
+  border: 1px solid black;
+  background-color:white;
+  
+  .close-alert{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 20px;
+  }
+}
+
+
 .header {
   background-color: white;
   .header-inner {
